--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -7,9 +7,10 @@
 {% endblock %}
 
 {% block content %}
-<div class="max-w-md mx-auto">
-    <div class="bg-white p-6 rounded-lg shadow-md">
-        <h2 class="text-xl font-normal mb-6 text-center">{% trans "Sign In" %}</h2>
+<div class="px-3 sm:px-6 py-4 sm:py-6">
+    <div class="max-w-md mx-auto">
+        <div class="bg-white p-6 rounded-lg shadow-md">
+            <h2 class="text-xl font-normal mb-6 text-center">{% trans "Sign In" %}</h2>
 
         {% if not SOCIALACCOUNT_ONLY %}
             <div class="mb-4 text-center">
@@ -139,6 +140,7 @@
                 </div>
             </div>
         {% endif %}
+        </div>
     </div>
 </div>
 {% endblock content %}
