--- a/templates/planner/editChild.html
+++ b/templates/planner/editChild.html
@@ -47,6 +47,7 @@
 {% endblock %}
 
 {% block content %}
+<div class="px-3 sm:px-6 py-4 sm:py-6">
     <div class="max-w-2xl mx-auto">
         <!-- Modern Header -->
         <div class="bg-white border-2 border-primary shadow-lg mb-8">
@@ -258,4 +259,5 @@
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
