--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -43,7 +43,7 @@
                         <input type="email" 
                                name="login" 
                                id="id_login"
-                               class="w-full px-4 py-3 border-2 border-gray-300 focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary font-medium"
+                               class="w-full px-4 py-3 border-2 border-gray-300 focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary font-medium rounded-none"
                                placeholder="Enter your email address" 
                                required>
                         {% if form.login.errors %}
