--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -4,7 +4,7 @@
 
 {% block title %}
     {% trans "Sign Up" %} - ParentPlanner
-{% endblock %}
+{% endblock title %}
 
 {% block content %}
 <div class="px-3 sm:px-6 py-4 sm:py-6">
@@ -147,7 +147,6 @@
                         {% trans "Sign Up" %}
                     </button>
                 </form>
-            {% endif %}
 
             <!-- Social signup -->
             {% if SOCIALACCOUNT_ENABLED %}
@@ -169,4 +168,4 @@
         </div>
     </div>
 </div>
-{% endblock content %}
+{% endblock %}
