Fix swipe navigation and remove notes from entry form

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -7,7 +7,7 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'css/dashboard.css' %}">
 <link rel="stylesheet" href="{% static 'css/dashboard-scroll.css' %}">
-<script src="{% static 'js/dashboard-optimized.js' %}" defer></script>
+<script src="{% static 'js/clean-swipe.js' %}" defer></script>
 <script src="{% static 'js/color_picker.js' %}" defer></script>
 
 <style>
